# microERP

./: .gitignore
client/: .eslintignore  package.json
client/app/: layout.tsx  page.tsx
client/app/endform/: page.tsx
client/app/form/: page.tsx
client/app/home/: page.tsx
client/app/inventory/: page.tsx
client/app/login/: page.tsx
client/app/products/: page.tsx
client/app/sales/: page.tsx
client/app/sellerlogin/: page.tsx
client/app/sellers/: page.tsx
client/app/sellersignin/: page.tsx
client/app/settings/: page.tsx
client/app/signin/: page.tsx
client/app/supplies/: page.tsx
client/components/blocks/: all-products.tsx  edit-product-dialog.tsx  edit-product.tsx  end-sale-form.tsx  home.tsx  inventory.tsx  login-form.tsx  products.tsx  recent-sales.tsx  sale-form.tsx  sale_form.tsx  sales.tsx  seller-login-form.tsx  seller-signin-form.tsx  sellers.tsx  settings.tsx  signin-form.tsx  supplies.tsx
client/components/custom/: approve-users-dialog.tsx  aside-bar.tsx  create-product-dialog.tsx  create-sale-dialog.tsx  create-supply-dialog.tsx  create-user-dialog.tsx  delete-product-dialog.tsx  delete-sale-dialog.tsx  header.tsx  (+16 more)
client/lib/: api.ts  axios.ts
server/: .env.example  .gitignore  build.sh  pyproject.toml  render.yaml
server/ERPserver/ERPserver/: asgi.py  settings.py  urls.py  wsgi.py
server/ERPserver/main_app/: models.py  serializers.py  urls.py  views.py
server/Root/: manage.py
server/Root/ERPserver/: settings.py  urls.py
server/Root/main_app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+3 files in other folders)
